[workspace]
members = [
  "bin/tsumori/",
  "crates/http/",
  "crates/bridge/",
  "crates/utils/",
]
default-members = ["bin/tsumori"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
homepage = "https://tsumori-ui.vercel.app/"
repository = "https://github.com/tsumori-io/tsumori-rs"
exclude = [".github/"]

[profile.release]
lto = "thin"
strip = "debuginfo"

[workspace.dependencies]
# tsumori
tsumori = { path = "bin/tsumori", default-features = false }
http = { path = "crates/http", default-features = false }
bridge = { path = "crates/bridge", default-features = false }
utils = { path = "crates/utils", default-features = false }

# misc
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
reqwest = { version = "0.12.4", default-features = false }
serde = { version = "1.0.203", default-features = false}
tokio = { version = "1.38.0", default-features = false }
