[package]
name = "bridge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
utils = { workspace = true }

# alloy = { workspace = true, features = ["full", "reqwest"] }
alloy = { workspace = true, features = ["providers", "provider-http", "reqwest", "sol-types", "transport-http"] }
hex = { workspace = true, features = ["alloc"] }
hex-literal = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "default-tls"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] } # todo: use specific features

# alloy-chains = { version = "0.1.18", default-features = false }
# cast = { git = "https://github.com/foundry-rs/foundry", rev = "6179312", default-features = false }

