[package]
name = "utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["providers", "provider-http", "reqwest", "rpc", "rpc-types", "sol-types", "transport-http"] }
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json", "default-tls"] }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] } # todo: use specific features
# alloy = { workspace = true, features = ["full", "node-bindings"] }
